--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^2.1.4",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^1.3.0",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "favicon": "0.0.2",
@@ -16,6 +17,8 @@
     "mongodb": "^2.2.11",
     "mongoose": "^4.7.2",
     "morgan": "~1.7.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "webshot": "^0.18.0"
   }
